# dyna1-quadruped

./: .gitignore  CITATION.cff  LICENSE  README.en.md  README.md
hardware/: BOM.xlsx  README.md
software/: Dockerfile  README.md
software/Dyna_ws/data/: colores.csv  plot_angles.py  read4.py  read_base.py  read_currents.py  read_weights.py
software/Dyna_ws/data/20231030-145556/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20231106-192904/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20231106-193511/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20231106-193804/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20231212-132428/: control.csv
software/Dyna_ws/data/20240202-094555/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240206-104938/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240206-105418/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240206-141625/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240206-142916/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240208-150437/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240209-114854/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240209-143924/: control.csv  currents.csv  measured.csv
software/Dyna_ws/data/20240228-132908/: control.csv  currents.csv  imu.csv  measured.csv
software/Dyna_ws/data/20240229-101939/: control.csv  currents.csv  imu.csv  measured.csv
software/Dyna_ws/src/controler_cpp/: CMakeLists.txt  package.xml
software/Dyna_ws/src/controler_cpp/config/: dyna_params.yaml  joy_params.yaml
software/Dyna_ws/src/controler_cpp/launch/: real_interface_launch.py
software/Dyna_ws/src/controler_cpp/src/: algebra.cpp  algebra.hpp  bezier.cpp  bezier.hpp  dyna_real_interface.cpp  dyna_real_interface.hpp  leg_kinematics.cpp  leg_kinematics.hpp  quad_kinematics.cpp  quad_kinematics.hpp  trajectories.cpp  trajectories.hpp
software/Dyna_ws/src/motor_can/: CMakeLists.txt  package.xml
software/Dyna_ws/src/motor_can/config/: config-old.json  config.json  config_old.json  motor_param.yaml  motor_params.yaml
software/Dyna_ws/src/motor_can/launch/: motor_launch.py
software/Dyna_ws/src/motor_can/src/: brushless.cpp  brushless.hpp  can_encoder_decoder.cpp  can_encoder_decoder.hpp  motors.cpp  motors.hpp
software/dyna-python/: calibrate.py  can_setup.sh  config.json  configold.json  firmware_workaround.py  reboot.py  test_encoder_reading.py  test_sinewave.py  turn_all_off.py
software/dyna-python/classes/: CAN.py  arduino_sensors.py  brushless.py  brushless_CAN.py  hx711.py  led.py  leg.py  leg_kinematics.py  leg_math.py  leg_path.py  motors.py  motors_fake.py  odrive-cansimple.dbc  odrive_CAN.py  quad_kinematics.py  quadruped.py  scale.py  servo.py  trajectories.py  uart_bridge.py
software/isaacsim/: README.md
software/isaacsim/DynabotIsaacTemplate/: setup.py
(+204 files in other folders)
